--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "eventemitter3": "1.1.0",
     "express": "4.12.4",
     "fastclick": "1.0.6",
-    "flux": "2.0.3",
+    "flummox": "^3.5.2",
+    "flux": "^2.0.3",
     "front-matter": "1.0.0",
+    "immutable": "^3.7.3",
     "jade": "1.10.0",
     "lodash": "3.9.3",
     "normalize.css": "3.0.3",
+    "object-assign": "^3.0.0",
     "react": "0.13.3",
+    "react-bootstrap": "^0.23.2",
     "source-map-support": "0.3.1",
-    "superagent": "1.2.0"
+    "superagent": "1.2.0",
+    "uniqueid": "^0.1.0"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.2.0",
